# robotic_arm_learning

./: CMakeLists.txt  readme.md
control_algorithm/config/: joint_ctrl_config.json  joint_ctrl_config_1.json  joint_ctrl_config_rizon4.json
control_algorithm/data/: q.txt  q_err.txt
control_algorithm/include/: lpf_fst.h  pino_kin_dyn.h  planner.h  pvt_ctrl.h  useful_math.h
control_algorithm/script/: plot.py  plot2.py
control_algorithm/src/: lpf_fst.cpp  pino_kin_dyn.cpp  planner.cpp  pvt_ctrl.cpp  useful_math.cpp
demo/: demo_dyn.cpp  demo_ik.cpp  demo_motor_param.cpp  demo_traj_plan.cpp
model/flexiv_description/urdf/: rizon4.urdf  rizon4.xml  scene.xml
model/iiwa_description/urdf/: iiwa14.urdf  iiwa14.xml
model/kuka_iiwa_14/: iiwa14 copy.xml  iiwa14.urdf  iiwa14.xml
sim_interface/include/: GLFW_callback.h  MJ_interface.h  data_bus.h
sim_interface/src/: GLFW_callback.cpp  MJ_interface.cpp
